--- a/terrasalon/pages/services.html
+++ b/terrasalon/pages/services.html
@@ -34,10 +34,13 @@
                     <ul id="menu-menu-1" class="nav navbar-nav navbar-right responsive-nav main-nav-list">
 
                         <li id="menu-item-70" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item current_page_item menu-item-70"><a href="http://srotips.org/verde/services/">Services</a></li>
-                        <li id="menu-item-71" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-71"><a href="http://srotips.org/verde/team/">Team</a></li>
-                        <li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-69"><a href="http://srotips.org/verde/how-tos/">How-To’s</a></li>
-                        <li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a href="http://srotips.org/verde/green-referrals/">Green Referrals</a></li>
-                        <li id="menu-item-67" class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-56  menu-item-67"><a href="http://srotips.org/verde/">Contact Us</a></li>
+                        <li id="menu-item-71" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-71"><a href="http://terrasalonnh.com/WPcore/our-team/">Our Team</a></li>
+                        
+        <!--NOT NEEDED RIGHT NOW-->
+                        <!--<li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-69"><a href="http://srotips.org/verde/how-tos/">How-To’s</a></li>
+                        <li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a href="http://srotips.org/verde/green-referrals/">Green Referrals</a></li>-->
+                        
+                        <li id="menu-item-67" class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-56  menu-item-67"><a href="http://terrasalonnh.com/WPcore/contact-us/">Contact Us</a></li>
 
                     </ul>
                 </nav>
