Added favicon, fixed photos, fixed meta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="author" content="Jonathan Northcott">
     
     <!--TODO: Favicon-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 	<title>Jonathan Northcott</title>
 
@@ -119,7 +121,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Design</h3>
 							<div class="iconbox-desc">
-				                I have experience creating graphics and websites
+				                I have experience creating static graphics and various websites
 							</div>
 						</div>
 					</div>
@@ -208,7 +210,7 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/item-1.jpg" alt="img01"/>
+                            <img src="assets/images/java_bckgrnd.png" alt="img01"/>
                             <figcaption onclick="location.href='assets/pages/java-experience.html'">
                                 <h2>Java <span>Experience</span></h2>
                                 <p>School and Personal projects written in Java</p>
@@ -292,10 +294,10 @@
 				<div class="col-sm-6 col-sm-offset-3">
 
 					<div class="pfblock-header">
-						<h2 class="pfblock-title">Drop me a line</h2>
+						<h2 class="pfblock-title">Send me a message</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							<!--Potential Subtitle-->
 						</div>
 					</div>
 
@@ -346,19 +348,12 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-                        <!--TODO: Only Github, linkedin and email-->
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a target="_blank" href="http://https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
+						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
-<!--TODO: Update footer-->
-					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
-                    </p>
                     <p class="copyright">
-                        © 2015 Jonathan Northcott | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
+                        © 2015 Jonathan Northcott
 					</p>
 
 				</div>
