--- a/assets/pages/java-experience.html
+++ b/assets/pages/java-experience.html
@@ -7,6 +7,8 @@
 	<meta name="author" content="Jonathan Northcott">
 
 	<title>JDN | Java Experience</title>
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
 	<!-- CSS -->
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -44,7 +46,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Jonathan Northcott</a>
+					<a class="navbar-brand" href="../../index.html">Jonathan Northcott</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
@@ -135,19 +137,12 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-                        <!--TODO: Only Github, linkedin and email-->
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a target="_blank" href="http://https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
+						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
-<!--TODO: Update footer-->
-					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
-                    </p>
                     <p class="copyright">
-                        © 2015 Jonathan Northcott | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
+                        © 2015 Jonathan Northcott
 					</p>
 
 				</div>
@@ -155,8 +150,6 @@
 			</div><!-- .row -->
 		</div><!-- .container -->
 	</footer>
-
-	<!-- Footer end -->
 
 
 	<!-- Javascript files -->
