--- a/index.html
+++ b/index.html
@@ -310,26 +310,34 @@
 
 				<div class="col-sm-6 col-sm-offset-3">
 
-					<form id="contact-form" action="http://formspree.io/northcott.j@husky.neu.edu" method="POST">
+					<form id="contact-form" method="POST">
 						<div class="ajax-hidden">
 							<div class="form-group wow fadeInUp">
 								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="name" placeholder="Name">
+								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
 							</div>
 
 							<div class="form-group wow fadeInUp" data-wow-delay=".1s">
 								<label class="sr-only" for="c_email">Email</label>
-								<input type="email" id="c_email" class="form-control" name="_replyto" placeholder="E-mail">
+								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
 							</div>
 
 							<div class="form-group wow fadeInUp" data-wow-delay=".2s">
-								<textarea class="form-control" id="c_message" name="message" rows="7" placeholder="Message"></textarea>
+								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Message"></textarea>
 							</div>
 
 							<button type="submit" value="Send" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s">Send Message</button>
 						</div>
 						<div class="ajax-response"></div>
 					</form>
+                    
+                    <form id="fspeeForm" style="display: none;" action="http://formspree.io/northcott.j@husky.neu.edu"
+      method="POST">
+    <input id="fspeeName" type="text" name="name">
+    <input id="fspeeEmail" type="email" name="_replyto">
+    <input id="fspeeMsg" type="text" name="message">
+    <button id="fspeeSubmit" type="submit" value="Send">
+</form>
 
 				</div>
 
