Established tracking, sorted out links, and setup Java pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 	<title>Jonathan Northcott</title>
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-68480030-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!--USED CLEAN TEMPLATE http://scripteden.com/download/clean-one-page-personal-portfolio-template/-->
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
@@ -266,7 +278,7 @@
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
                             <img src="assets/images/item-6.jpg" alt="img01"/>
-                            <figcaption onclick="location.href='assets/pages/resume.pdf'">
+                            <figcaption onclick="window.open('assets/pages/resume.pdf')">
                                 <h2>Formal <span>Résumé</span></h2>
                                 <p>Download a PDF Résumé</p>
                             </figcaption>			
@@ -356,7 +368,7 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-						<li><a target="_blank" href="http://https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
+						<li><a target="_blank" href="https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
 						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
