--- a/assets/pages/java-experience.html
+++ b/assets/pages/java-experience.html
@@ -7,6 +7,17 @@
 	<meta name="author" content="Jonathan Northcott">
 
 	<title>JDN | Java Experience</title>
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68480030-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
@@ -94,8 +105,8 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/item-1.jpg" alt="img01"/>
-                            <figcaption>
+                            <img src="../images/item-2.jpg" alt="img01"/>
+                            <figcaption onclick="location.href='maze-game.html'">
                                 <h2>Maze <span>Game</span></h2>
                                 <p>Build a maze and solve it</p>
                             </figcaption>			
@@ -109,7 +120,7 @@
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
                             <img src="../images/item-2.jpg" alt="img01"/>
-                            <figcaption>
+                            <figcaption onclick="location.href='forbidden-island.html'">
                                 <h2>Forbidden <span>Island</span></h2>
                                 <p>Navigate to collect pieces and escape</p>
                             </figcaption>			
@@ -137,7 +148,7 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-						<li><a target="_blank" href="http://https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
+						<li><a target="_blank" href="https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
 						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
