Added photos, fixed contact form, changed to Projects and updated meta

--- a/assets/pages/web-development.html
+++ b/assets/pages/web-development.html
@@ -64,7 +64,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="../../index.html#home">Home</a></li>
 						<li><a href="../../index.html#services">Services</a></li>
-                        <li><a href="../../index.html#portfolio">Works</a></li>
+                        <li><a href="../../index.html#portfolio">Projects</a></li>
 						<li><a href="../../index.html#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -118,7 +118,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/sro_tips.png" alt="img01"/>
+                            <img src="../images/sro_tips.png" alt="SROtips"/>
                             <figcaption onclick="window.open('http://pdtips.org/hollis')">
                                 <h2>SRO <span>Tips</span></h2>
                                 <p>Anonymous Tip Tool for law enforcement</p>
