--- a/assets/pages/java-experience.html
+++ b/assets/pages/java-experience.html
@@ -64,7 +64,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="../../index.html#home">Home</a></li>
 						<li><a href="../../index.html#services">Services</a></li>
-                        <li><a href="../../index.html#portfolio">Works</a></li>
+                        <li><a href="../../index.html#portfolio">Projects</a></li>
 						<li><a href="../../index.html#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -105,7 +105,7 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/item-2.jpg" alt="img01"/>
+                            <img src="../images/maze_game.jpg" alt="Maze Game"/>
                             <figcaption onclick="location.href='maze-game.html'">
                                 <h2>Maze <span>Game</span></h2>
                                 <p>Build a maze and solve it</p>
@@ -119,7 +119,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/item-2.jpg" alt="img01"/>
+                            <img src="../images/forbidden_island.jpg" alt="Forbidden Island"/>
                             <figcaption onclick="location.href='forbidden-island.html'">
                                 <h2>Forbidden <span>Island</span></h2>
                                 <p>Navigate to collect pieces and escape</p>
