--- a/assets/pages/maze-game.html
+++ b/assets/pages/maze-game.html
@@ -53,7 +53,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="../../index.html#home">Home</a></li>
 						<li><a href="../../index.html#services">Services</a></li>
-                        <li><a href="../../index.html#portfolio">Works</a></li>
+                        <li><a href="../../index.html#portfolio">Projects</a></li>
 						<li><a href="../../index.html#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -92,7 +92,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/sro_tips.png" alt="img01"/>
+                            <img src="../images/launch_maze.jpg" alt="Launch Game"/>
                             <figcaption  onclick="javascript:if (!deployJava.isWebStartInstalled(&quot;1.7.0&quot;)) {if (deployJava.installLatestJRE()) {if (deployJava.launch(&quot;/legacy/java/MazeLaunchSm.jnlp&quot;)) {}}} else {if (deployJava.launch(&quot;/legacy/java/MazeLaunchSm.jnlp&quot;)) {}}">
                                 <h2>Small <span>Game</span></h2>
                                 <p>This will open a Java Web Start Applet</p>
