--- a/assets/pages/web-design.html
+++ b/assets/pages/web-design.html
@@ -64,7 +64,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="../../index.html#home">Home</a></li>
 						<li><a href="../../index.html#services">Services</a></li>
-                        <li><a href="../../index.html#portfolio">Works</a></li>
+                        <li><a href="../../index.html#portfolio">Projects</a></li>
 						<li><a href="../../index.html#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -105,7 +105,7 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/chi_sigma.png" alt="img01"/>
+                            <img src="../images/chi_sigma.png" alt="Chi Sigma"/>
                             <figcaption onclick="window.open('http://chisigma.co')">
                                 <h2>Chi <span>Sigma</span></h2>
                                 <p>A fraternity founded at Northeastern</p>
@@ -119,7 +119,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="../images/terra_salon.png" alt="img01"/>
+                            <img src="../images/terra_salon.png" alt="Terra Salon"/>
                             <figcaption onclick="window.open('http://terrasalonnh.com')">
                                 <h2>Terra <span>Salon</span></h2>
                                 <p>An Organic salon based in Nashua, NH</p>
