Fixed index image link

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/java_bckgrnd.png" alt="Java Experience"/>
+                            <img src="assets/images/java_exp.jpg" alt="Java Experience"/>
                             <figcaption onclick="location.href='assets/pages/java-experience.html'">
                                 <h2>Java <span>Experience</span></h2>
                                 <p>School and Personal projects written in Java</p>
