Added an a to opening line

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<section id="home" class="pfblock-image screen-height">
         <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is Jonathan Northcott and I am</div>
+			<div class="start">Hello, my name is Jonathan Northcott and I am a</div>
 			<h1>Northeastern University Student</h1>
 			<div class="start">Combined B.S. in Computer Science and Business Administration</div>
 		</div>
