--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Marketing</h3>
 							<div class="iconbox-desc">
-								Launched, branded and advertised a couple businesses
+								Launched, branded and advertised a couple of businesses
 							</div>
 						</div>
 					</div>
