Added a with instead of in

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Development</h3>
 							<div class="iconbox-desc">
-							Worked in several languages and coding styles
+							Worked with several languages and coding styles
                             </div>
 						</div>
 					</div>
