--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="A collection of my prior experiences and personal projects">
+	<meta name="description" content="A collection of Jonathan Northcott's prior experiences and personal projects
+	worked on both at and before Northeastern Univeristy">
 	<meta name="author" content="Jonathan Northcott">
     
     <!--TODO: Favicon-->
