--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 
 				<div class="col-sm-3">
 
-					<div class="iconbox wow slideInLeft">
+					<div class="iconbox wow slideInLeft" href="assets/pages/web-design.html">
 						<div class="iconbox-icon">
 							<span class="icon-magic-wand"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Design</h3>
+							<h3 class="iconbox-title">Management</h3>
 							<div class="iconbox-desc">
-				                I have experience creating static graphics and various websites
+				                I have experience managing online resources for clients
 							</div>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 
 				<div class="col-sm-3">
 
-					<div class="iconbox wow slideInLeft">
+					<div class="iconbox wow slideInLeft" href="assets/pages/web-development.html">
 						<div class="iconbox-icon">
 							<span class="icon-puzzle"></span>
 						</div>
@@ -159,7 +159,7 @@
 
 				<div class="col-sm-3">
 
-					<div class="iconbox wow slideInRight">
+					<div class="iconbox wow slideInRight" href="assets/pages/web-design.html">
 						<div class="iconbox-icon">
 							<span class="icon-badge"></span>
 						</div>
@@ -175,14 +175,14 @@
 
 				<div class="col-sm-3">
 
-					<div class="iconbox wow slideInRight">
+					<div class="iconbox wow slideInRight" href="#portfolio">
 						<div class="iconbox-icon">
 							<span class="icon-question"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Development</h3>
 							<div class="iconbox-desc">
-							Worked with several languages and coding styles
+							Python, Java, NodeJS, AngularJS, SQL, MongoDB, HTML, Javascript
                             </div>
 						</div>
 					</div>
@@ -223,10 +223,10 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/java_exp.jpg" alt="Java Experience"/>
-                            <figcaption onclick="location.href='assets/pages/java-experience.html'">
-                                <h2>Java <span>Experience</span></h2>
-                                <p>School and Personal projects written in Java</p>
+                            <img src="assets/images/proj_exp.jpg" alt="Project Experience"/>
+                            <figcaption onclick="location.href='assets/pages/project-experience.html'">
+                                <h2>Project <span>Experience</span></h2>
+                                <p>School and Personal projects</p>
                             </figcaption>			
                         </figure>
                     </div>
