--- a/assets/pages/project-experience.html
+++ b/assets/pages/project-experience.html
@@ -164,7 +164,7 @@
                             <img src="../images/openseat.png" alt="OpenSeat Finder"/>
                             <figcaption onclick="location.href='openseat.html'">
                                 <h2>OpenSeat <span>Finder</span></h2>
-                                <p>Notifies user when a seat opens up</p>
+                                <p>Notifies user when a seat opens up in a class</p>
                             </figcaption>			
                         </figure>
                     </div>
