--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -84,7 +84,7 @@
 			<div class="intro-content text-center">	
 				<!-- Logo -->								
 				<div class="logo">
-					<h2 class="text-logo">Chi Sigma</h2>
+					<h2 class="text-logo">Chi Sigma Cruise</h2>
 				</div><!-- /End logo -->							
 				<!-- ==== Main Heading ==== -->												
 				<h1 class="intro-title">Splash Page is Coming Soon!</h1>
@@ -122,7 +122,8 @@
 						Tickets are $40 and include food and non-alcoholic beverages.<br>
 						Paid bar will be available for those 21+.<br>
 						Cruise is on March 31st, 2017 11pm - 2am.<br>
-						400 people minimum with a maximum of 600.
+						400 people minimum with a maximum of 600.<br>
+						Register for a ticket <a href="http://manifest.chisigma.co/passengerform">here.</a>
 					</p>
 				</div>							
 											
