Removed minimum from people count

--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -122,7 +122,7 @@
 						Tickets are $40 and include food and non-alcoholic beverages.<br>
 						Paid bar will be available for those 21+.<br>
 						Cruise is on March 31st, 2017 11pm - 2am.<br>
-						400 people minimum with a maximum of 600.<br>
+						400 people with a maximum of 600.<br>
 						Register for a ticket <a href="http://manifest.chisigma.co/passengerform">here.</a>
 					</p>
 				</div>							
