Added link to the video of Spirit

--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -124,6 +124,7 @@
 						Cruise is on March 31st, 2017 11pm - 2am.<br>
 						400 people with a maximum of 600.<br>
 						Register for a ticket <a href="http://manifest.chisigma.co/passengerform">here.</a>
+						Video of the venue <a href="https://youtu.be/eIPhxXF3l1s">here.</a>
 					</p>
 				</div>							
 											
