--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -123,7 +123,7 @@
 						Paid bar will be available for those 21+.<br>
 						Cruise is on March 31st, 2017 11pm - 2am.<br>
 						400 people with a maximum of 600.<br>
-						Register for a ticket <a href="http://manifest.chisigma.co/passengerform">here.</a>
+						Register for a ticket <a href="http://manifest.chisigma.co/passengerform">here.</a><br>
 						Video of the venue <a href="https://youtu.be/eIPhxXF3l1s">here.</a>
 					</p>
 				</div>							
