Little personal flair

--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -125,6 +125,8 @@
 						400 people with a maximum of 600.<br>
 						Register for a ticket <a target="_blank" href="http://manifest.chisigma.co/passengerform">here.</a><br>
 						Video of the venue <a target="_blank" href="https://youtu.be/eIPhxXF3l1s">here.</a>
+						<h3>Thank you for being an early supporter! It means a lot. Really, it does.</h3>
+						<h4>♥ Chi Sigma</h4>
 					</p>
 				</div>							
 											
