Style modifications for bio

--- a/subdirec/chi_sigma/pages/members.html
+++ b/subdirec/chi_sigma/pages/members.html
@@ -106,7 +106,7 @@
         </div>
         <div class="flex-container mdl-card mdl-shadow--2dp">
             <div class="jon mdl-card__title mdl-card--expand">
-                <h2 class="mdl-card__title-text">Jonathan</h2> </div>
+                <h2 class="mdl-card__title-text" style="padding-top: 450px !important;">Jonathan</h2> </div>
             <div class="mdl-card__content">
                 <div class="mdl-card__supporting-text"> Jonathan is a New Hampshire raised individual who brings some of the best aspects of rustic living to the city life in Boston. He's a caring individual who successfully nurtured and cared for three goldfish from infancy up until they quietly passed away and went to the upside down at the age of 11. The painful loss of his fish pushed him away from a career in Marine Biology and into the study of Computer Science and Business Administration. If you see him around Boston or beyond, he'll answer to Jonathan, Jon, John, JNorth, backpack boy and a few others that are Chi Sigma exclusives.<span style="font-style: italic"> In loving memory of Spot, Pikachu, and Nemo</span> </div>
                 <div class="mdl-card__actions mdl-card--border mdl-card__tag"> FOUNDER </div>
