Facebook button and new youtube link

--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -93,7 +93,10 @@
                 <a href="http://manifest.chisigma.co/passengerform" target="_blank" class="btn btn-default btn-lg">Register Here</a>
 
                 <h4 style="margin-top: 90px">Want to see the boat in action?</h4>
-                <a href="https://www.youtube.com/watch?v=4LU6NRoitsc" target="_blank" class="btn btn-default btn-lg">Check out this video</a>
+                <a href="https://www.youtube.com/watch?v=eIPhxXF3l1s&feature=youtu.be" target="_blank" class="btn btn-default btn-lg">Check out this video</a>
+
+                <h4 style="margin-top: 90px">Want to invite your friends?</h4>
+                <a href="https://www.facebook.com/events/444341565955225/" target="_blank" class="btn btn-default btn-lg">Facebook Event</a>
 
                 <p style="margin-top: 90px">Unfortunately, we have to have a minimum number of people sign up for the event, so we cannot accept
                     refunds. If for some reason this event has to be cancelled, you will be reimbursed for your ticket.
