--- a/subdirec/chi_sigma/pages/members.html
+++ b/subdirec/chi_sigma/pages/members.html
@@ -92,7 +92,7 @@
             <div class="zach mdl-card__title mdl-card--expand">
                 <h2 class="mdl-card__title-text">Zach</h2> </div>
             <div class="mdl-card__content">
-                <div class="mdl-card__supporting-text"> A jovial and strapping young lad who helped found this great organization. He has many little known talents, such as being an expert masseuse. Currently, he is a player on the club Ultimate Frisbee team at Northeastern University and is pursuing a major in Russian art history. </div>
+                <div class="mdl-card__supporting-text"> A jovial and entusiastic young lad who helped found this great organization. Happiness and positivity follow him wherever he goes, brightening the days of those he interacts with. He once earned a perfect score on his personality test and is incapable of holding grudges. Except for tomatoes; tomatoes are vessels of the antichrist. </div>
                 <div class="mdl-card__actions mdl-card--border mdl-card__tag"> FOUNDER </div>
             </div>
         </div>
