Added FAQ and setup for new server

--- a/subdirec/spirited-away/index.html
+++ b/subdirec/spirited-away/index.html
@@ -13,17 +13,17 @@
     <title>Chi Sigma->Est.2014</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="sa/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
-    <link href="css/pages.css" rel="stylesheet">
+    <link href="sa/css/grayscale.css" rel="stylesheet">
+    <link href="sa/css/pages.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="sa/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="sa/img/favicon.ico" type="image/x-icon" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -90,13 +90,45 @@
                 </div>
 
                 <h4 style="margin-top: 90px">Want a ticket?</h4>
-                <a href="http://manifest.chisigma.co/passengerform" target="_blank" class="btn btn-default btn-lg">Register Here</a>
+                <a href="https://manifest.chisigma.co/passengerform" target="_blank" class="btn btn-default btn-lg">Register Here</a>
 
                 <h4 style="margin-top: 90px">Want to see the boat in action?</h4>
                 <a href="https://www.youtube.com/watch?v=eIPhxXF3l1s&feature=youtu.be" target="_blank" class="btn btn-default btn-lg">Check out this video</a>
 
                 <h4 style="margin-top: 90px">Want to invite your friends?</h4>
                 <a href="https://www.facebook.com/events/444341565955225/" target="_blank" class="btn btn-default btn-lg">Facebook Event</a>
+
+                <h1 id="FAQ" style="margin-top: 150px">FAQ</h1>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Are you still selling tickets?</h4>
+                <p>Yes, and we will continue to do so until we sell out or set sail - whichever comes first.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Do I have to be 21+ to attend?</h4>
+                <p>Nope! We've just been keeping track of people's ages so that we can give the Spirit of Boston a heads up on how much booze
+                to stock the paid bars with.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Are you guys making a profit from this?</h4>
+                <p>When we came up with the idea to organize this event, our goal was to make it a good time for everyone.
+                Since cheaper is almost always better, we decided to sell the tickets at cost.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Is this for Northeastern students only?</h4>
+                <p>We are planning this event to try to get as many groups of people together as possible. Everyone is welcome.
+                At the time of writing this FAQ, we have students attending from 7 different schools in Boston.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Is this actually happening?</h4>
+                <p>Yep. We signed a contract, so this boat will be setting sail with or without you - we hope you choose the prior.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Do I have to pay for my ticket right away?</h4>
+                <p>Of course not. We're all college kids and get that you might not be able to pay right away. Feel free to sign-up
+                and pay when you're good and ready.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">What if I don't know what I'm doing that day?</h4>
+                <p>That's okay! Go ahead and sign-up anyway. There are no strings attached to filling out the form.
+                That way, we can get an idea of how many people are interested, and it makes planning on our end easier.</p>
+
+                <h4 style="margin-top: 45px; margin-bottom: 15px;">Is this the same boat as some of the other aquatic events?</h4>
+                <p>Nope - at least not the larger events. The Spirit of Boston is newly renovated and designed specifically for
+                this kind of event. We have a few links on this site and the Facebook page with info on the venue if you want to know more.</p>
 
                 <p style="margin-top: 90px">Unfortunately, we have to have a minimum number of people sign up for the event, so we cannot accept
                     refunds. If for some reason this event has to be cancelled, you will be reimbursed for your ticket.
@@ -115,7 +147,7 @@
 <footer>
     <div class="row height-fix">
         <div class="footer col-12">
-            <a href="http://chisigma.co"><div class="footer-icon"></div></a>
+            <a href="https://chisigma.co"><div class="footer-icon"></div></a>
         </div>
     </div>
     <div class="row">
