Updated page tab header

--- a/assets/pages/simply_tour.html
+++ b/assets/pages/simply_tour.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="A collection of my prior experiences and personal projects">
 	<meta name="author" content="Jonathan Northcott">
 
-	<title>JDN | TourStream</title>
+	<title>JDN | SimplyTour</title>
     <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
