Update link to stat-hacks

--- a/assets/pages/stat-hacks.html
+++ b/assets/pages/stat-hacks.html
@@ -79,7 +79,7 @@
 						<h2 class="pfblock-title">Stat Hacks</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-                            The Clery Act of 1990 requires universities to publish an annual report of campus crime statistics. This website uses a MEAN stack to graph and compute statistics for over 11,000 schools and ~17 different crimes. I implemented the backend Node API using Mongoose and Express along with the front-end AngularJS framework. Currently, the focus is to obtain new data and cleanse existing data to increase the accuracy of the statistics and to provide more options to plot. Check it out here -> <a href="http://justagraph.co">College Crime Statistics</a>
+                            The Clery Act of 1990 requires universities to publish an annual report of campus crime statistics. This website uses a MEAN stack to graph and compute statistics for over 11,000 schools and ~17 different crimes. I implemented the backend Node API using Mongoose and Express along with the front-end AngularJS framework. Currently, the focus is to obtain new data and cleanse existing data to increase the accuracy of the statistics and to provide more options to plot. Check it out here -> <a href="http://stat-hacks.herokuapp.com/">College Crime Statistics</a>
 						</div>
 					</div>
 
