updated site layout and added project links

--- a/assets/pages/web-development.html
+++ b/assets/pages/web-development.html
@@ -102,19 +102,33 @@
             <div class="row">
 
 
-                <div class="col-xs-12 col-sm-4 col-md-4">
+              <div class="col-xs-12 col-sm-4 col-md-4">
 
-                    <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="../images/sro_tips.png" alt="SROtips"/>
-                            <figcaption onclick="window.open('http://pdtips.org/hollis')">
-                                <h2>SRO <span>Tips</span></h2>
-                                <p>Anonymous Tip Tool for law enforcement</p>
-                            </figcaption>
-                        </figure>
-                    </div>
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/where-is-sro.jpg" alt="WhereIsSRO"/>
+                          <figcaption onclick="location.href='where-is-sro.html'">
+                              <h2>Where is <span>the SRO</span></h2>
+                              <p>Tool to find and contact a School Resource Officer</p>
+                          </figcaption>
+                      </figure>
+                  </div>
 
-                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/spirited-away.jpg" alt="SpiritedAway"/>
+                          <figcaption onclick="location.href='spirited-away.html'">
+                              <h2>Spirited <span>Away</span></h2>
+                              <p>Application for ticket sales and guest management</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
@@ -124,20 +138,6 @@
                             <figcaption onclick="location.href='stat-hacks.html'">
                                 <h2>Stat <span>Hacks</span></h2>
                                 <p>Data visualization for college crime information</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                </div>
-
-                <div class="col-xs-12 col-sm-4 col-md-4">
-
-                    <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="../images/open_seat.jpg" alt="Open Seat"/>
-                            <figcaption onclick="window.open('http://jdnorthcott.com')">
-                                <h2>Open <span>Seat</span></h2>
-                                <p>Coming Soon!</p>
                             </figcaption>
                         </figure>
                     </div>
