--- a/assets/pages/project-experience.html
+++ b/assets/pages/project-experience.html
@@ -100,20 +100,105 @@
 
 
             <div class="row">
+              <div class="col-xs-12 col-sm-4 col-md-4">
 
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/breathe-easy.jpg" alt="Breathe Easy"/>
+                          <figcaption onclick="location.href='breathe-easy.html'">
+                              <h2>Breathe <span>Easy</span></h2>
+                              <p>Mobile application for pediatric asthma management</p>
+                          </figcaption>
+                      </figure>
+                  </div>
 
-                    <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="../images/maze_game.jpg" alt="Maze Game"/>
-                            <figcaption onclick="location.href='maze-game.html'">
-                                <h2>Maze <span>Game</span></h2>
-                                <p>Build a maze and solve it</p>
-                            </figcaption>
-                        </figure>
-                    </div>
+              </div>
 
-                </div>
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/eternal-legere.jpg" alt="Eternal Legere"/>
+                          <figcaption onclick="location.href='eternal-legere.html'">
+                              <h2>Eternal <span>Legere</span></h2>
+                              <p>Free mobile movie streaming service</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/facebook-analyzer.png" alt="Facebook Analyzer"/>
+                          <figcaption onclick="location.href='facebook-analyzer.html'">
+                              <h2>Facebook <span>Analyzer</span></h2>
+                              <p>Generate stats on your Facebook usage</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/deployment-bot.jpg" alt="Deployment Bot"/>
+                          <figcaption onclick="location.href='deployment-bot.html'">
+                              <h2>Deployment <span>Bot</span></h2>
+                              <p>Handle deployments for web and mobile apps</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/film-revenue.jpg" alt="Film Revenue Model"/>
+                          <figcaption onclick="location.href='film-revenue.html'">
+                              <h2>Film Revenue <span>Model</span></h2>
+                              <p>Predict a film's revenue from its IMDb page</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/domain-mapper.jpg" alt="Domain Mapper"/>
+                          <figcaption onclick="location.href='domain-mapper.html'">
+                              <h2>Domain <span>Mapper</span></h2>
+                              <p>Identify a company's internet footprint</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-sm-4 col-md-4">
+
+                  <div class="grid wow zoomIn">
+                      <figure class="effect-bubba">
+                          <img src="../images/maze_game.jpg" alt="Maze Game"/>
+                          <figcaption onclick="location.href='maze-game.html'">
+                              <h2>Maze <span>Game</span></h2>
+                              <p>Build a maze and solve it</p>
+                          </figcaption>
+                      </figure>
+                  </div>
+
+              </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
@@ -142,6 +227,8 @@
                     </div>
 
                 </div>
+              </div>
+              <div class="row">
 
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
@@ -170,8 +257,6 @@
                     </div>
 
                 </div>
-
-
 		</div><!-- .container -->
 
 	</section>
