fixing png naming issue

--- a/assets/pages/project-experience.html
+++ b/assets/pages/project-experience.html
@@ -132,7 +132,7 @@
 
                   <div class="grid wow zoomIn">
                       <figure class="effect-bubba">
-                          <img src="../images/facebook-analyzer.png" alt="Facebook Analyzer"/>
+                          <img src="../images/facebook-analyzer.PNG" alt="Facebook Analyzer"/>
                           <figcaption onclick="location.href='facebook-analyzer.html'">
                               <h2>Facebook <span>Analyzer</span></h2>
                               <p>Generate stats on your Facebook usage</p>
