--- a/assets/pages/spirited-away.html
+++ b/assets/pages/spirited-away.html
@@ -90,7 +90,7 @@
                 So I decided to build my own.
               </p>
               <h3>Registration Functionality</h3>
-              <img src="../images/spirited-away/signup.png" style="height: 550px;" />
+              <img src="../images/spirited-away/signup.PNG" style="height: 550px;" />
               <p style="padding-top: 10px;">
                 The guest sign-up form supports fields to capture information such as discount codes,
                 if a promoter was used, who referred someone to the event, different ticket types, as well
@@ -102,7 +102,7 @@
                 sent via Slack to me that someone has registered.
               </p>
               <h3>Admin Functionality</h3>
-              <img src="../images/spirited-away/slack-bot.png" style="height: 450px;" />
+              <img src="../images/spirited-away/slack-bot.PNG" style="height: 450px;" />
               <p style="padding-top: 10px;">
                 As an Admin, I needed to be able to quickly mark people as payment requested/paid, and to send
                 them their tickets. This is done via Slack with API hooks back to the application.
