--- a/assets/pages/where-is-sro.html
+++ b/assets/pages/where-is-sro.html
@@ -87,7 +87,7 @@
                 quickly find and contact the SRO if you need them?
               </p>
               <h3>Find Functionality</h3>
-              <img src="../images/where-is-sro/find-dash.png" style="height: 550px;" />
+              <img src="../images/where-is-sro/find-dash.PNG" style="height: 550px;" />
               <p style="padding-top: 10px;">
                 The "public" facing functionality that was needed was a mobile friendly way
                 for specific individuals to be able to see the current status of the SRO.
@@ -102,7 +102,7 @@
                 be approved by an administrator before gaining access to the SRO's status.
               </p>
               <h3>Admin Functionality</h3>
-              <img src="../images/where-is-sro/admin-dash.png" style="height: 550px;" />
+              <img src="../images/where-is-sro/admin-dash.PNG" style="height: 550px;" />
               <p style="padding-top: 10px;">
                 On the admin side, the functionality needed was updating statuses, adding new users,
                 seeing a log of past statuses, and managing reusable information like Location details.
